--- a/drill/Chart.yaml
+++ b/drill/Chart.yaml
@@ -1,7 +1,7 @@
 apiVersion: v2
 name: drill
 version: 1.0.0
-appVersion: 1.17.0
+appVersion: 1.20.0
 description: Helm Charts for deploying Apache Drill Clusters on Kubernetes
 type: application
 keywords:
@@ -10,6 +10,5 @@ home: 'http://drill.apache.org/'
 sources:
   - 'https://github.com/Agirish/drill-helm-charts'
 maintainers:
-  - name: Abhishek Girish
-    email: agirish@apache.org
+  - name: MohammadAshraf 
 
